--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
     "express": "^4.18.2",
+    "fsevents": "^2.3.2",
     "md5": "^2.1.0",
     "node": "^19.6.1"
   },
